--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <!-- PIX -->
                         <div class="link-button pix" onclick="copyPix()">
                             <i class="fas fa-qrcode"></i>
-                            <span>PIX: +55 47 99996-7569</span>
+                            <span>PIX: (47) 99996-7569</span>
                             <i class="fas fa-copy"></i>
                         </div>
 
