--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delicadoce - Links</title>
+    <title>Delicalinks</title>
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -44,12 +44,12 @@
                         <!-- PIX -->
                         <div class="link-button pix" onclick="copyPix()">
                             <i class="fas fa-qrcode"></i>
-                            <span>PIX: (47) 99996-7569</span>
+                            <span>PIX: (47) 99675-6983</span>
                             <i class="fas fa-copy"></i>
                         </div>
 
                         <!-- WhatsApp -->
-                        <a href="https://wa.me/5547999675698" target="_blank" class="link-button whatsapp">
+                        <a href="https://wa.me/5547996756983" target="_blank" class="link-button whatsapp">
                             <i class="fab fa-whatsapp"></i>
                             <span>WhatsApp</span>
                             <i class="fas fa-external-link-alt"></i>
